--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit>=1.32.0
+streamlit>=1.32.0,<1.40.0
 openai-whisper>=20231117
-transformers>=4.36.0
+transformers>=4.36.0,<5.0.0
 sentencepiece>=0.1.99
 sacremoses>=0.0.53
-torch>=2.0.0
-TTS>=0.22.0
+torch>=2.0.0,<2.5.0
+TTS>=0.22.0,<0.23.0
 resemblyzer>=0.1.3
 soundfile>=0.12.1
 librosa>=0.10.0
-numpy>=1.24.0
+numpy>=1.24.0,<2.0.0
 ffmpeg-python>=0.2.0
